# ros-templates

rclcpp/topics/minimal_publisher/: CHANGELOG.rst  CMakeLists.txt  README.md  member_function.cpp
rclcpp/topics/minimal_subscriber/: CMakeLists.txt  README.md  member_function.cpp
rclcpp/topics/path_to_trajectroy/: CMakeLists.txt  package.xml
rclcpp/topics/path_to_trajectroy/include/: trajectory_generator.hpp
rclcpp/topics/path_to_trajectroy/src/: trajectory_generator.cpp  trajectory_node.cpp
roscpp/topics/lisener/: CMakeLists.txt  package.xml
roscpp/topics/lisener/src/: lisner_node.cpp
roscpp/topics/lisener_talker/: CMakeLists.txt  package.xml
roscpp/topics/lisener_talker/lib/: CMakeLists.txt
roscpp/topics/lisener_talker/lib/include/: msg.h
roscpp/topics/lisener_talker/lib/src/: msg.cpp
roscpp/topics/lisener_talker/src/: talker_lisner.cpp
roscpp/topics/talker/: CMakeLists.txt  package.xml
roscpp/topics/talker/src/: talker_node.cpp
