<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>path_to_trajectory</name>
  <version>0.9.4</version>
  <description>ggggg</description>
  <maintainer email="gggg@wakeb.tech">ggg</maintainer>
  <license>Apache License 2.0</license>
  <author>g g</author>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>nav_msgs</build_depend>
 <build_depend>common_interface</build_depend>

  <exec_depend>rclcpp</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
